2016-05-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored BE module, compatible with TYPO3 CMS 7, removed ExtJS, resolves #59441
	* Moved languages files to XLIFF, resolves #76251
	* Removed deprecated properties, resolves #76252

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved to namespaces, applied PSR-2, replaced old API calls, resolves #76016

2015-09-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong object being passed to process parameters hook, resolves #69579
	* Released version 2.5.1, resolves #69604

2015-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.5.0, resolves #67412

2015-06-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added proper handling of MM_opposite_field property in MM relations, resolves #65648

2015-05-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of MM relations, resolves #64775

2015-05-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used reverseOrder flag for inverting sorted records, resolves #67132

2015-05-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added hook for processing connector parameters, resolves #66796 (thanks to Julien Henchoz)

2015-01-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Allowed for import of very large XML files, resolves #63762 (thanks to Uwe Harnischmacher)
	* Released version 2.4.1, resolves #64283

2014-11-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.4.0, resolves #58038

2014-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added feature to preserve XML structure of imported values, resolves ##63012
	* Improved manual by adding scope in properties TOC

2014-08-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved performance of handled items check, resolves #60445 (thanks to Johannes Feustel)
	* Improved description of reference_uid property, resolves #60808
	* Released version 2.3.2, resolves #60823

2014-06-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>
